<resources>
    <string name="app_name">Gevs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="your_vote_your_choice">Your vote, Your choice</string>
    <string name="notification">notification</string>
    <string name="home">Home</string>
    <string name="vote">Vote</string>
    <string name="result">Result</string>
    <string name="settings">Settings</string>
    <string name="welcome_to_the_gevs_voting_platform">Welcome to the GEVS voting platform</string>
    <string name="candidates">Candidates</string>
    <string name="candidate_details">Candidate Details</string>
    <string name="for_post">For Post:</string>
    <string name="party">Party:</string>
    <string name="age">Age:</string>
    <string name="dob">DOB:</string>
    <string name="constituency">Constituency:</string>
    <string name="message">Message:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Election</string>
    <string name="about_app">GEVS (General Election Voting System) is an innovative native Android app developed for CO7102 Coursework 2, strategically crafted to address historical election issues in Shangri-La. Offering secure online voting, live tracking, post notifications, dark mode, analytics, and more, it stands as a robust solution for a transparent, inclusive, and technologically advanced democratic future.</string>
</resources>