<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/voterDashboardFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/voterVoteFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_vote"
        android:title="@string/vote" />

    <item
        android:id="@+id/voterResultFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_result"
        android:title="@string/result" />

    <item
        android:id="@+id/voterSettingsFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_settings"
        android:title="@string/settings" />

</menu>